samples/_failures_safe/1761370323_752347_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_004e659b.c: In function ‘main’:
./samples/SAFE/__tmp_004e659b.c:162:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  162 |     for (int i
      |     ^~~
./samples/SAFE/__tmp_004e659b.c:162:5: error: expected declaration or statement at end of input
